force-app/main/default/objects/ks_pmj_base__Issue__c/ks_pmj_base__Issue__c.object-meta.xml
<CustomObject>
    <label>課題</label>
    <nameField>
        <displayFormat>ISU-{0000}</displayFormat>
        <label>課題No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>