force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ka_ito11__c.field-meta.xml
<CustomField>
    <fullName>ka_ito11__c</fullName>
    <label>最終回答</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>