force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ka_jigyotan__c.field-meta.xml
<CustomField>
    <fullName>ka_jigyotan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>事業会社担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>jigyotan1</relationshipName>
    <type>Lookup</type>
</CustomField>