force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ka_nai1__c.field-meta.xml
<CustomField>
    <fullName>ka_nai1__c</fullName>
    <label>課題内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>