force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ka_sin1__c.field-meta.xml
<CustomField>
    <fullName>ka_sin1__c</fullName>
    <label>進捗</label>
    <length>255</length>
    <type>Text</type>
</CustomField>