force-app/main/default/objects/ks_pmj_base__Issue__c/fields/Ka_yusen121__c.field-meta.xml
<CustomField>
    <fullName>Ka_yusen121__c</fullName>
    <label>優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>