force-app/main/default/objects/ks_pmj_base__Issue__c/fields/kad_toino1__c.field-meta.xml
<CustomField>
    <fullName>kad_toino1__c</fullName>
    <description>Teamsにある問い合わせ管理簿No.略称はJu（住環境）Cw（CSWEB）、PF（マーケPF）に項番を記載</description>
    <label>問い合わせNo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>