force-app/main/default/objects/ks_pmj_base__Issue__c/fields/kadai_1__c.field-meta.xml
<CustomField>
    <fullName>kadai_1__c</fullName>
    <label>課題対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSWEB</fullName>
            </value>
            <value>
                <fullName>住環境</fullName>
            </value>
            <value>
                <fullName>マーケ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>