force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__CloseDate__c</fullName>
    <label>完了日</label>
    <type>Date</type>
</CustomField>