force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__Detail__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Detail__c</fullName>
    <label>内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>