force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__Impact__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Impact__c</fullName>
    <label>影響度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
                <color>#FF0000</color>
                <label>緊急（利用不可等）</label>
            </value>
            <value>
                <fullName>中</fullName>
                <color>#FFCC66</color>
                <label>急ぎ（業務影響あり）</label>
            </value>
            <value>
                <fullName>低</fullName>
                <color>#33CC00</color>
                <label>通常（改善）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>