force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__InCharge__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__InCharge__c</fullName>
    <label>現担当者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>牛島さん</fullName>
            </value>
            <value>
                <fullName>小池さん</fullName>
            </value>
            <value>
                <fullName>松井さん</fullName>
            </value>
            <value>
                <fullName>ケイズ</fullName>
            </value>
            <value>
                <fullName>野原HD様</fullName>
            </value>
            <value>
                <fullName>セラク</fullName>
                <isActive>false</isActive>
                <label>セラク</label>
            </value>
            <value>
                <fullName>御社</fullName>
                <isActive>false</isActive>
                <label>御社</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>