force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__LimitDate__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__LimitDate__c</fullName>
    <label>回答期日</label>
    <type>Date</type>
</CustomField>