force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__QAType__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__QAType__c</fullName>
    <label>課題種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>機能</fullName>
            </value>
            <value>
                <fullName>基盤</fullName>
            </value>
            <value>
                <fullName>運用</fullName>
            </value>
            <value>
                <fullName>教育</fullName>
            </value>
            <value>
                <fullName>移行</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>