force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__Status__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>作業中</fullName>
            </value>
            <value>
                <fullName>クローズ</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>