force-app/main/default/objects/ks_pmj_base__Issue__c/fields/ks_pmj_base__Title__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Title__c</fullName>
    <label>件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>