force-app/main/default/objects/ks_pmj_base__Issue__c/fields/Limit_ScheduleDate1__c.field-meta.xml
<CustomField>
    <fullName>Limit_ScheduleDate1__c</fullName>
    <label>回答予定日</label>
    <type>Date</type>
</CustomField>