force-app/main/default/objects/ks_pmj_base__Issue__c/fields/marketan001__c.field-meta.xml
<CustomField>
    <fullName>marketan001__c</fullName>
    <label>マーケ担当者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>牛島大介</fullName>
            </value>
            <value>
                <fullName>小池元洋</fullName>
            </value>
            <value>
                <fullName>松井大樹</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>