force-app/main/default/objects/ks_pmj_base__Issue__c/fields/PrimaryFlg__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>優先Flg</label>
    <type>Checkbox</type>
</CustomField>