force-app/main/default/objects/ks_pmj_base__Issue__c/fields/zig_12345__c.field-meta.xml
<CustomField>
    <fullName>zig_12345__c</fullName>
    <label>事業会社名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSWEB</fullName>
            </value>
            <value>
                <fullName>住環境</fullName>
            </value>
            <value>
                <fullName>マーケPF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>