force-app/main/default/objects/ks_pmj_base__Issue__c/listViews/ka_noclose.listView-meta.xml
<ListView>
    <fullName>ka_noclose</fullName>
    <columns>Ka_yusen121__c</columns>
    <columns>NAME</columns>
    <columns>kad_toino1__c</columns>
    <columns>ka_nxt1__c</columns>
    <columns>marketan001__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ks_pmj_base__Status__c</field>
        <operation>notEqual</operation>
        <value>クローズ,保留</value>
    </filters>
    <label>対応中</label>
</ListView>