force-app/main/default/objects/ks_pmj_base__Issue__c/listViews/ks_pmj_base__QA01.listView-meta.xml
<ListView>
    <fullName>ks_pmj_base__QA01</fullName>
    <columns>NAME</columns>
    <columns>ks_pmj_base__Title__c</columns>
    <columns>ks_pmj_base__Status__c</columns>
    <columns>ks_pmj_base__CreateDate__c</columns>
    <columns>ks_pmj_base__LimitDate__c</columns>
    <columns>PrimaryFlg__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての課題</label>
</ListView>