force-app/main/default/objects/ks_pmj_base__Issue__c/listViews/X01_me.listView-meta.xml
<ListView>
    <fullName>X01_me</fullName>
    <columns>NAME</columns>
    <columns>ks_pmj_base__Title__c</columns>
    <columns>ks_pmj_base__InCharge__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>01.私の課題</label>
</ListView>